<resources>
    <string name="app_name">MockProject</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wellcome_with_google_account">Wellcome with Google Account</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="mail_demo">sang.pham.intern@ntq-solution.com.vn</string>
    <string name="sang_pham">Phạm Xuân Sang</string>
    <string name="menu_user_calendar">User Calendar</string>
    <string name="menu_following_classes">Following Classes</string>
    <string name="menu_help">Help</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_faq">Fag</string>
    <string name="menu_logout">Logout</string>
    <string name="log_out">Log out</string>
    <string name="communicate">Communicate</string>
    <string name="emai">email</string>
    <string name="userName">userName</string>
    <string name="avt">avt</string>
    <string name="link_ntq">ntq-solution.com.vn</string>
    <string name="content_demo">Nhiều nước trong khu vực như Singapore, Thái Lan, Malaysia… đã có những chiến dịch quảng bá thương hiệu đất nước rất thành công với nhiều kênh khác nhau, kéo theo ngành du lịch phát triển, thì với Việt Nam, chiến thắng tại AFF Cup của tuyển quốc gia, hay việc H\'Hen Niê nằm trong top 5 Hoa hậu Hoàn vũ là cơ hội lớn. Đó là nhận định chung của giới chuyên gia.
    Sau khi đội tuyển Việt Nam vô địch AFF Cup 2018, toàn đội được các doanh nghiệp hứa thưởng tiền mặt và nhiều phần quà giá trị ước tính hơn 25 tỉ đồng. Đặc biệt, cá nhân cầu thủ ghi bàn và huấn luyện viên Park Hang seo được thưởng riêng hàng tỉ đồng.
    Sau khi đội tuyển Việt Nam vô địch AFF Cup 2018, toàn đội được các doanh nghiệp hứa thưởng tiền mặt và nhiều phần quà giá trị ước tính hơn 25 tỉ đồng. Đặc biệt, cá nhân cầu thủ ghi bàn và huấn luyện viên Park Hang seo được thưởng riêng hàng tỉ đồng.
    </string>
    <string name="show_detail">Show detail</string>
    <string name="vietNamVoiDich">Việt Nam vô địch!!</string>
    <string name="dateDemo">Date : 2019/01/15</string>
    <string name="start_date_demo">Start : 2019/15/01</string>
    <string name="end_date_demo">End : 2019/01/15</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="level">Level</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="tv_error_title_create_content">Title is required !</string>
    <string name="tv_error_title_too_create_content">Bạn không được nhập quá 64 kí tự</string>
    <string name="tv_error_start_date_small_create_content">Bạn không được chọn ngày nhỏ hơn hôm nay</string>
    <string name="tv_error_level_create_content">Level is required !</string>
    <string name="tv_error_end_date_create_content">Please pick a end date</string>
    <string name="tv_error_end_date_between_today_startday_create_content">Bạn không được chọn ngày nhỏ hơn hôm nay và ngày bắt đầu !</string>
    <string name="tv_error_start_date_create_content">Please pick a start date</string>
    <string name="tv_error_content_create_content">Content is required !</string>
    <string name="level_create_content">Level</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message">Message</string>
    <string name="create_new_group">Create New Group</string>
    <string name="done_and_publist">Done and Publist</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="pick_a_day">Pick a day</string>
    <string name="course">Course</string>
    <string name="your_group_name">Your Group Name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="course_is_required">Course is required !</string>
    <string name="a">A</string>
    <string name="messageLoginNotNTQ">Email của bạn không được phép đăng nhập vào hệ thống</string>
    <string name="people_48">People: 48</string>
    <string name="join_to_group">Join to group</string>
    <string name="connection_in_java">Connection in Java</string>
    <string name="pham_xuan_sang">Pham Xuan Sang</string>
    <string name="submit">Submit</string>
    <string name="MembershipRequest">Your membership request is pending approval!!</string>
    <string name="abc_ntq_solution_com_vn">abc@ntq-solution.com.vn</string>
    <string name="skype">Skype:</string>
    <string name="joined_date">Joined Date:</string>
    <string name="_24_01_2019">24/01/2019</string>
    <string name="tel">Tel:</string>
    <string name="_0986508018">0986508018</string>
    <string name="address">Address:</string>
    <string name="four">4</string>
    <string name="idGroupToCreateContentFragment">idGroupToCreateContentFragment</string>
    <string name="idGroupForFragmentSearchMember">idGroupForFragmentSearchMember</string>
    <string name="sendContentToEditFragment">sendContentToEditFragment</string>
    <string name="sendIdGroupFragment">sendIdGroupFragment  </string>
    <string name="idGroup">idGroup  </string>
    <string name="idCaptain">idCaptain  </string>
    <string name="userId">userId  </string>
    <string name="isCaptain">isCaptain  </string>
    <string name="contentId">contentId  </string>
    <string name="courseId">courseId  </string>
    <string name="Sorry">Sorry  </string>
    <string name="AreYouSureSignOut">Are you sure SignOut  </string>

    <string name="october_2019">October_2019</string>
    <string name="create_event">Create Event</string>
    <string name="some_thing_about_your_event">Some thing about your event …</string>
    <string name="titleEvent">Title…</string>
    <string name="document_link">Document Link …</string>
    <string name="start_time">StartTime…</string>
    <string name="duration">Duration…</string>
    <string name="TitleIsEmpty">Title is Empty</string>
    <string name="TitleOver64Character">Title over 64 character</string>
    <string name="DescriptionOver255Character">Description over 255 character</string>
    <string name="LinkDocumentIsNotURL">Link document is not URL</string>
    <string name="SpeakerOver32Character">Speaker over 32 character</string>
    <string name="SpeakerIsEmpty">Speaker is Empty</string>
    <string name="StartTimeIsEmpty">Start time is Empty</string>
    <string name="DurationIsEmpty">Duration is Empty</string>
    <string name="CreateEventSuccess">Create event success</string>
    <string name="idGroupToCalendarFragment">idGroupToCalendarFragment</string>
    <string name="idContentToCreateFragment">idContentToCreateFragment</string>
    <string name="edit_event">Edit Event</string>
    <string name="beginner">Beginer</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>

    <string name="msg_choose_date_start">First choose start date !</string>
    <string name="msg_not_empty">Not Empty</string>
    <string name="text_add_event">+ Add Event</string>
    <string name="speaker">Speaker...</string>
    <string name="event_is_require">Event is require !</string>
    <string name="document_link_is_require">Document link is require!</string>
    <string name="speaker_is_require">Speaker is require!</string>
    <string name="durartion_is_require">Durartion is require!</string>
    <string name="start_time_is_require">Start time is Require!</string>
    <string name="end_time">End Time...</string>
    <string name="end_time_is_require">End Time is require!</string>
    <string name="link_url">Đây không phải là đường link!</string>
    <string name="ok">Ok</string>
    <string name="choose_end_time">Bạn phải chọn lại end time!</string>
    <string name="choose_start_time">Bạn phải chọn lại start time !</string>
    <string name="Create_content_Success">Create content Success!</string>
    <string name="Create_course_Success">Create course Success!</string>
    <string name="Create_content_approve">Tạo content thành công và đợi phê duyệt!</string>
    <string name="Attendance_content_Success">Bạn đã điểm danh thành công</string>
    <string name="comment_here">Comment here...</string>
    <string name="www_sang_com_vn">www.sang.com.vn</string>
    <string name="_2019_01_15">2019/01/15</string>
    <string name="_2019_01_21">2019/01/21</string>
    <string name="notify_empty_item_event">Not Event Finish</string>
    <string name="attendance">Attendance</string>
    <string name="comment">Comment</string>
    <string name="viewAll">View ALL</string>
    <string name="decline">Ẩn content!</string>
    <string name="end">End:</string>
    <string name="start">Start:</string>
    <string name="deleteEvent">Delete Event!!</string>
    <string name="edit_title">Sửa Title</string>
    <string name="edit_banner">Sửa ảnh Banner</string>
    <string name="edt_avatar_course">Sửa Avatar Course</string>
    <string name="edit">Edit</string>
    <string name="edt_description">Sửa description</string>
    <string name="editbanner">Thay đổi banner thành công</string>
    <string name="editAvatar">Thay đổi avatar course thành công</string>


</resources>
