<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_create_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_16">

        <LinearLayout style="@style/linearlayout_create_content">

            <EditText
                android:id="@+id/edt_title_create_content"
                style="@style/edt_title_create_content"
                android:drawableRight="@drawable/iconpen"
                android:hint="@string/title" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_empty"
                    style="@style/tv_error_create_content"
                    android:text="@string/tv_error_title_create_content" />

                <TextView
                    android:id="@+id/tv_over_quantity"
                    style="@style/tv_error_create_content"
                    android:text="@string/tv_error_title_too_create_content" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/shape_background_textview_create_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/level" />

                <Spinner
                    android:id="@+id/sp_create_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_8" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_error_spinner"
                style="@style/tv_error_create_content"
                android:text="@string/tv_error_level_create_content" />
        </LinearLayout>

        <LinearLayout style="@style/linearlayout_create_content">

            <TextView
                android:id="@+id/tv_start_date_create_content"
                style="@style/tv_date_create_content"
                android:drawableRight="@drawable/icondate"
                android:hint="@string/start_date" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_start_date_empty"
                    style="@style/tv_error_create_content"
                    android:text="@string/tv_error_start_date_create_content" />

                <TextView
                    android:id="@+id/tv_error_start_date_create_content"
                    style="@style/tv_error_create_content"
                    android:text="@string/tv_error_start_date_small_create_content" />
            </FrameLayout>


            <TextView
                android:id="@+id/tv_end_date_create_content"
                style="@style/tv_date_create_content"
                android:layout_marginTop="@dimen/dp_8"
                android:drawableRight="@drawable/icondate"
                android:hint="@string/end_date" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_end_date_empty"
                    style="@style/tv_error_create_content"
                    android:text="@string/tv_error_end_date_create_content" />

                <TextView
                    android:id="@+id/tv_error_end_date_create_content"
                    style="@style/tv_error_create_content"
                    android:text="@string/tv_error_end_date_between_today_startday_create_content" />
            </FrameLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/edt_description_create_content"
            style="@style/edt_description_create_content" />

        <TextView
            android:id="@+id/tv_description_empty"
            style="@style/tv_error_create_content"
            android:text="@string/tv_error_content_create_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_create_content"
                style="@style/btn_cancel_create_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_done_create_content"
                style="@style/btn_done_create_content"
                android:text="@string/done" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
