<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_create_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Sprin7.CreateGroupFragment">

    <EditText
        android:id="@+id/edt_title_create_group"
        style="@style/edt_title_create_content"
        android:drawableRight="@drawable/iconpen"
        android:hint="@string/title" />

    <TextView
        android:id="@+id/tv_title_empty_createGroup"
        style="@style/tv_error_create_content"
        android:text="@string/tv_error_title_create_content" />

    <EditText
        android:id="@+id/edt_description_create_group"
        style="@style/edt_description_create_content" />
    <TextView
        android:id="@+id/tv_description_empty"
        style="@style/tv_error_create_content"
        android:text="@string/tv_error_content_create_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_create_group"
            style="@style/btn_cancel_create_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_done_create_group"
            style="@style/btn_done_create_content"
            android:text="@string/done" />
    </LinearLayout>
</LinearLayout>