<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_create_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <LinearLayout style="@style/linearlayout_create_content">

            <EditText
                android:id="@+id/edt_title_edit_content"
                style="@style/edt_title_create_content"
                android:drawableRight="@drawable/iconpen"
                android:hint="@string/title"
                android:padding="@dimen/dp_5" />

            <TextView
                android:id="@+id/tv_error_title_ESC"
                style="@style/tv_error_create_content" />

            <Spinner
                android:id="@+id/sp_edit_content_ESC"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/shape_background_textview_create_content" />


            <TextView
                android:id="@+id/tv_error_spinner_ESC"
                style="@style/tv_error_create_content"
                android:text="@string/tv_error_level_create_content"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout style="@style/linearlayout_create_content">

            <TextView
                android:id="@+id/tv_start_date_edit_content_ESC"
                style="@style/tv_date_create_content"
                android:drawableRight="@drawable/icondate"
                android:hint="@string/start_date"
                android:padding="@dimen/dp_5" />

            <TextView
                android:id="@+id/tv_error_start_date_ESC"
                style="@style/tv_error_create_content"
                android:text="@string/tv_error_start_date_create_content"
                android:visibility="gone" />


            <TextView
                android:id="@+id/tv_end_date_edit_content_ESC"
                style="@style/tv_date_create_content"
                android:layout_marginTop="@dimen/dp_8"
                android:drawableRight="@drawable/icondate"
                android:hint="@string/end_date" />


            <TextView
                android:id="@+id/tv_end_date_error_ESC"
                style="@style/tv_error_create_content"
                android:text="@string/tv_error_end_date_create_content"
                android:visibility="gone" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_description_edit_content_ESC"
            style="@style/edt_description_create_content"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/tv_error_description_ESC"
            style="@style/tv_error_create_content"
            android:text="@string/tv_error_content_create_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_edit_content_ESC"
                style="@style/btn_cancel_create_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_done_edit_content_ESC"
                style="@style/btn_done_create_content"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>